# tide_rust_trading

./: Cargo.toml  README.md
src/: main.rs
src/exchanges/: mod.rs  model.rs
src/exchanges/mexc/: mod.rs  model.rs
src/exchanges/mexc/spot/: account.rs  client.rs  market.rs  mod.rs  trade.rs
