[package]
name = "tide_rust_trading_local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.107"
http = "0.2.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_urlencoded = "0.7.1"
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"